feat: 修改网站名称

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: {zhengzhuang}
  * @Date: 2022-07-27 15:23:37
  * @LastEditors: {zhengzhuang}
- * @LastEditTime: 2022-08-02 15:37:30
+ * @LastEditTime: 2022-11-01 22:25:15
  * @Description: In User Settings Edit
 -->
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>远度云react-B端框架</title>
+	<title>react-admin demo</title>
 </head>
 
 <body>
